[package]
name = "generic-cache-server"
version = "0.1.0"
edition = "2021"
description = "Simple server that caches requests"
authors = ["Emma Britton <emmabritton@pm.me>"]
publish = false
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
rustls = "0.20.6"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.22", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
simple_logger = { version = "2.3.0", features = ["timestamps"] }